envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/clic/v1/BPPLOOEFVHPO/"
                route:
                  timeout: "60s"
                  prefix_rewrite: "/consultaempleados/"
                  cluster: consultaempleados
              - match:
                  prefix: "/identity/"
                route:
                  timeout: "60s"
                  host_rewrite: wolframio.grupo-exito.com
                  cluster: identity-server
              - match:
                  prefix: "/promo/v1/SAGQKIRQPDOV/"
                route:
                  timeout: "60s"
                  prefix_rewrite: "/explosion/"
                  cluster: explosion-promociones
              - match:
                  prefix: "/web-fundaciondash/"
                route:
                  auto_host_rewrite: true
                  cluster: web-fundaciondash
              - match:
                  prefix: "/web-portalmonederos/"
                route:
                  auto_host_rewrite: true
                  cluster: web-portalmonederos
              - match:
                  prefix: "/back-portalmonederos/"
                route:
                  auto_host_rewrite: true
                  cluster: back-portalmonederos
              - match:
                  prefix: "/api-services-po/"
                route:
                  auto_host_rewrite: true
                  cluster: api-services-po
              - match:
                  prefix: "/movilexito/v1/SXXCRIAHXHLT/"
                route:
                  timeout: "60s"
                  prefix_rewrite: "/"
                  cluster: subscription-recurring
              - match:
                  prefix: "/movilexito/v1/KWFQGGQRNDVF/"
                route:
                  timeout: "60s"
                  prefix_rewrite: "/"
                  cluster: transaction-payu
              - match:
                  prefix: "/movilexito/v1/UMCSBNHTMWFC/"
                route:
                  timeout: "60s"
                  prefix_rewrite: "/"
                  cluster: movilexito-query-customer-balance
              - match:
                  prefix: "/apiow/cfiscal/v1/KZ56ANHH9BDO/"
                route:
                  timeout: "15s"
                  prefix_rewrite: "/"
                  cluster: consecutivo-fiscal-web
              - match:
                  prefix: "/apiow/api/v1/X8WHR2V1MVUF/"
                route:
                  timeout: "30s"
                  prefix_rewrite: "/api/v1/"
                  cluster: consecutivo-fiscal-configuracion-prefijos
              - match:
                  prefix: "/apiow/api/v1/V0IPTJ35FR8T/"
                route:
                  timeout: "60s"
                  prefix_rewrite: "/api/v1/"
                  cluster: consecutivo-fiscal-consultas
              - match:
                  prefix: "/apiow/api/v1/WXWY4BV66EC5/"
                route:
                  timeout: "30s"
                  prefix_rewrite: "/api/v1/"
                  cluster: consecutivo-fiscal-carga-resoluciones-manual
              - match:
                  prefix: "/apiow/api/v1/JO936IGGYXDH/"
                route:
                  timeout: "15s"
                  prefix_rewrite: "/api/v1/"
                  cluster: consecutivo-fiscal-carga-resoluciones
              - match:
                  prefix: "/apiow/api/v1/OT5CMPX3A9B1/"
                route:
                  timeout: "15s"
                  prefix_rewrite: "/api/v1/"
                  cluster: consecutivo-fiscal-alerta-resoluciones
              - match:
                  prefix: "/apiow/chequeo/v1/HGZJKPFGNQAS/"
                route:
                  timeout: "15s"
                  auto_host_rewrite: true
                  cluster: admin-core-chequeador-precios
              - match:
                  prefix: "/apiow/api/v1/ASTRAINECTIV/tarea/"
                route:
                  timeout: "30s"
                  prefix_rewrite: "/"
                  cluster: dev-interactiva-services-tarea
              - match:
                  prefix: "/apiow/api/v1/ASTRAINECTIV/registro/"
                route:
                  timeout: "30s"
                  prefix_rewrite: "/"
                  cluster: dev-interactiva-services-registro
              - match:
                  prefix: "/apiow/api/v1/ASTRAINECTIV/catalogo/"
                route:
                  timeout: "30s"
                  prefix_rewrite: "/"
                  cluster: dev-interactiva-services-catalogo
              - match:
                  prefix: "/apiow/api/v1/ASTRAINECTIV/catalogo-view/"
                route:
                  timeout: "30s"
                  prefix_rewrite: "/"
                  cluster: dev-interactiva-services-catalogo-view
              - match:
                  prefix: "/apiow/api/v1/ASTRAINECTIV/catalogo-view/"
                route:
                  timeout: "30s"
                  prefix_rewrite: "/"
                  cluster: dev-interactiva-services-catalogo-view
              - match:
                  prefix: "/apiow/api/v1/ASTRAINECTIV/escalonamiento/"
                route:
                  timeout: "30s"
                  prefix_rewrite: "/"
                  cluster: dev-interactiva-services-escalonamiento
              - match:
                  prefix: "/apiow/api/v1/ASTRAINECTIV/asignacion/"
                route:
                  timeout: "30s"
                  prefix_rewrite: "/"
                  cluster: dev-interactiva-services-asignacion
              - match:
                  prefix: "/apiow/api/v1/ASTRAINECTIV/bpm/"
                route:
                  timeout: "30s"
                  prefix_rewrite: "/"
                  cluster: dev-interactiva-services-bpmgateway
              - match:
                  prefix: "/apiow/api/v1/ASTRAINECTIV/encuesta/"
                route:
                  timeout: "30s"
                  prefix_rewrite: "/"
                  cluster: dev-interactiva-services-encuesta
              - match:
                  prefix: "/apiow/api/v1/ASTRAINECTIV/bi/"
                route:
                  timeout: "30s"
                  prefix_rewrite: "/"
                  cluster: dev-interactiva-services-bi
              - match:
                  prefix: "/apiow/api/v1/VMLULYAVJDNK/"
                route:
                  timeout: "15s"
                  prefix_rewrite: "/api/v1/"
                  cluster: dev-oms-invoice-portal-back
              - match:
                  prefix: "/apiow/api/v1/JEAFHEMMTCUJ/"
                route:
                  timeout: "15s"
                  prefix_rewrite: "/"
                  cluster: dev-oms-invoice-portal
              - match:
                  prefix: "/apiow/api/v1/K9QMT21ZHH2P/"
                route:
                  timeout: "30s"
                  prefix_rewrite: "/api/v1/"
                  cluster: consecutivo-fiscal-integracion-pos-salida
              - match:
                  prefix: "/apiow/api/v1/P6WH95SXAC0P/"
                route:
                  timeout: "30s"
                  prefix_rewrite: "/api/v1/"
                  cluster: consecutivo-fiscal-integracion-pos-entrada
              - match:
                  prefix: "/apiow/api/v1/ARBWGWDQDVDE/"
                route:
                  timeout: "30s"
                  prefix_rewrite: "/"
                  cluster: sco-admon-monitoring
              - match:
                  prefix: "/apiow/api/v1/DREUULWNWVBY/"
                route:
                  timeout: "30s"
                  prefix_rewrite: "/"
                  cluster: sco-admon-fruver-scan
              - match:
                  prefix: "/apiow/api/v1/A78VYFE9JN3G/"
                route:
                  timeout: "30s"
                  prefix_rewrite: "/api/v1/"
                  cluster: portal-pro-mandato-consultas
              - match:
                  prefix: "/apiow/api/v1/DJ43A3ELARKX/"
                route:
                  timeout: "30s"
                  prefix_rewrite: "/api/v1/"
                  cluster: portal-pro-locatario-certificados
              - match:
                  prefix: "/apiow/api/v1/EXKR3UEBH2AV/"
                route:
                  timeout: "30s"
                  prefix_rewrite: "/api/v1/"
                  cluster: portal-pro-locatario-consultas-adicionales
              - match:
                  prefix: "/apiow/api/v1/F2RQVYE8EADP/"
                route:
                  timeout: "30s"
                  prefix_rewrite: "/api/v1/"
                  cluster: portal-pro-mandato-inscripcion
              - match:
                  prefix: "/apiow/api/v1/YSPXB4HY7BDQ/"
                route:
                  timeout: "30s"
                  prefix_rewrite: "/api/v1/"
                  cluster: portal-pro-mandato-terminacion
              - match:
                  prefix: "/apiow/api/v1/HJMR28W6W6XG/"
                route:
                  timeout: "30s"
                  prefix_rewrite: "/"
                  cluster: portal-pro-mandato-web
              - match:
                  prefix: "/apiow/api/v1/EXF9BR6YV4TP/"
                route:
                  timeout: "30s"
                  prefix_rewrite: "/api/v1/"
                  cluster: portal-pro-locatario-consultas
              - match:
                  prefix: "/apiow/api/v1/MEC423APF7N2/"
                route:
                  timeout: "30s"
                  prefix_rewrite: "/"
                  cluster: continuous-documentation-frontend
              - match:
                  prefix: "/apiow/api/v1/F7KBTM6G6JME/"
                route:
                  timeout: "30s"
                  prefix_rewrite: "/api/v1/"
                  cluster: ks-cliente-ventas-por-marca-cdp
              - match:
                  prefix: "/apiow/api/v1/DFTBGSNLCVCB/"
                route:
                  timeout: "60s"
                  prefix_rewrite: "/api/v1/"
                  cluster: consecutivo-fiscal-ejecucion-masiva-prefijos
              - match:
                  prefix: "/apiow/api/v1/KKGUJWMCZW/"
                route:
                  timeout: "60s"
                  prefix_rewrite: "/api/v1/"
                  cluster: mecanizacion-ptl-cierre-ordenes
              - match:
                  prefix: "/apiow/api/v1/HFYDFOEHSM/"
                route:
                  timeout: "60s"
                  prefix_rewrite: "/"
                  cluster: invoice-services-ssoentry
              - match:
                  prefix: "/apiow/api/v1/PQJUMSOQWS/"
                route:
                  timeout: "60s"
                  prefix_rewrite: "/"
                  cluster: consignment-services-ssoentry
              - match:
                  prefix: "/apiow/api/v1/TYEIAFQSHQQPF/"
                route:
                  timeout: "30s"
                  prefix_rewrite: "/api/v1/"
                  cluster: recibir-doc-electronicos-operador
              - match:
                  prefix: "/apiow/api/v1/POIUYTKJHWERTVC/"
                route:
                  timeout: "30s"
                  prefix_rewrite: "/api/v1/"
                  cluster: portal-pro-georeferenciacion-cropper
              - match:
                  prefix: "/apiow/api/v1/DFGHUYTREDFTRR/"
                route:
                  timeout: "30s"
                  prefix_rewrite: "/api/v1/"
                  cluster: portal-pro-georeferenciacion-habeas-data
              - match:
                  prefix: "/apiow/api/v1/CVBNMJHGFDTRE/"
                route:
                  timeout: "30s"
                  prefix_rewrite: "/"
                  cluster: portal-pro-georeferenciacion-web
              - match:
                  prefix: "/apiow/api/v1/OIUYSNBAYTQHS/"
                route:
                  timeout: "30s"
                  prefix_rewrite: "/api/v1/"
                  cluster: portal-pro-georeferenciacion-formulario
              - match:
                  prefix: "/apiow/api/v1/TYUIVGBHNJTGYH/"
                route:
                  timeout: "30s"
                  prefix_rewrite: "/api/v1/"
                  cluster: qr-bancolombia-proxy
          http_filters:
          - name: envoy.filters.http.jwt_authn
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
              bypass_cors_preflight: true
              providers:
                keycloak:
                  issuer: https://pasarela.grupo-exito.com:9943/auth/realms/GrupoExito
                  audiences:
                    - account
                    - interactiva
                  forward: 'true'
                  remote_jwks:
                    http_uri:
                      uri: http://10.2.98.134:8080/auth/realms/GrupoExito/protocol/openid-connect/certs
                      cluster: keycloak-server
                      timeout: 5s
                    cache_duration:
                      seconds: 30000
                identityserver:
                  issuer: https://conn-mw1-az-qa.grupo-exito.com/identity
                  audiences:
                    - L2ERD2SZLDK42K4T
                    - F9ND5Z3CKPVUGQYAE
                    - KN4BK2TO7QNNTF8S
                    - ZPZLPREBBZHGRQQ
                    - HIOYGIWTAXUOMLPD
                  forward: 'true'
                  local_jwks:
                    inline_string: '{"keys":[{"kty":"RSA","use":"sig","kid":"79B70A19EBEB63B995C89125BC04E23741D7AB23","x5t":"ebcKGevrY7mVyJElvATiN0HXqyM","e":"AQAB","n":"0SSzqYpG-APyQj3jLh2p3yiAHant_lf6JSSWf7fAIidPbYIqH6AbhinNJALvHbeWFObZcp3bHfucNcYovxf9SX33fzdJujVJLkVLzx0skG6b7eVRu3Bg58Q-C7aDr_VSUsWwzfF9vETX1jKcBteU8UgQKK_7szJD0wQQcymxdY2hQfMogAXsTRJebn_LlnYVNmTzV051ZNQ8iU4Sp8VMq6ZlvyscIL8PZgs-mPDnlvwvNBedthow56-f-gvbNRpjnRFKK-fmb715nQ7HfrZ8DhACNOb3Z3HHGdD0hYkHTbGUYn8Jk1L-se_-RPsbGCkjoxEcNjdbw [...]
              rules:
                - match:
                    prefix: "/apiow/api/v1/F2RQVYE8EADP/"
                  requires:
                    provider_name: identityserver
                - match:
                    prefix: "/apiow/api/v1/TYUIVGBHNJTGYH/"
                  requires:
                    provider_name: identityserver
                - match:
                    prefix: "/apiow/api/v1/TYEIAFQSHQQPF/"
                  requires:
                    provider_name: identityserver
                - match:
                    prefix: "/apiow/api/v1/YSPXB4HY7BDQ/"
                  requires:
                    provider_name: identityserver
                - match:
                    prefix: "/apiow/api/v1/A78VYFE9JN3G/"
                  requires:
                    provider_name: identityserver
                - match:
                    prefix: "/apiow/api/v1/KKGUJWMCZW/"
                  requires:
                    provider_name: identityserver
                - match:
                    prefix: "/apiow/api/v1/POIUYTKJHWERTVC/"
                  requires:
                    provider_name: identityserver
                - match:
                    prefix: "/apiow/api/v1/DFGHUYTREDFTRR/"
                  requires:
                    provider_name: identityserver
                - match:
                    prefix: "/apiow/api/v1/OIUYSNBAYTQHS/"
                  requires:
                    provider_name: identityserver
          - name: envoy.buffer
            typed_config:
              "@type": type.googleapis.com/envoy.config.filter.http.buffer.v2.Buffer
              max_request_bytes: 7000000
          - name: envoy.filters.http.cors
            typed_config: {}
          - name: envoy.filters.http.router
            typed_config: {}
  clusters:
  - name: consultaempleados
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: consultaempleados
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: clic-consulta-empleados.dev-empleados.svc.cluster.local
                port_value: 80
  - name: explosion-promociones
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: explosion-promociones
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: ks-explosion-promociones-gdd.dev-promo-kafka.svc.cluster.local
                port_value: 7070
  - name: web-portalmonederos
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: web-portalmonederos
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: portal-admon-monederos-web.qa-portalmonedero.svc.cluster.local
                port_value: 80
  - name: web-fundaciondash
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: web-fundaciondash
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: dash-portal-clientes-fundacion.dev-dashfundacion.svc.cluster.local
                port_value: 8050
  - name: back-portalmonederos
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: back-portalmonederos
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: portal-admon-monederos-backend.qa-portalmonedero.svc.cluster.local
                port_value: 80
  - name: api-services-po
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: api-services-po
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: services-core-po.qa-servicios-core-po.svc.cluster.local
                port_value: 80
  - name: subscription-recurring
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: subscription-recurring
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: movilexito-subscription-recurring-customer.dev-api-movilexito-payu.svc.cluster.local
                port_value: 80
  - name: transaction-payu
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: transaction-payu
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: movilexito-transactions-payu.dev-api-movilexito-payu.svc.cluster.local
                port_value: 80
  - name: movilexito-query-customer-balance
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: movilexito-query-customer-balance
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: movilexito-query-customer-balance.dev-api-movilexito-payu.svc.cluster.local
                port_value: 80
  - name: consecutivo-fiscal-web
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: consecutivo-fiscal-web
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: portal-admon-consecutivo-fiscal-web.dev-cfiscal.svc.cluster.local
                port_value: 80
  - name: consecutivo-fiscal-configuracion-prefijos
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: consecutivo-fiscal-configuracion-prefijos
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: consecutivo-fiscal-configuracion-prefijos.dev-cfiscal.svc.cluster.local
                port_value: 80
  - name: consecutivo-fiscal-consultas
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: consecutivo-fiscal-consultas
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: consecutivo-fiscal-consultas.dev-cfiscal.svc.cluster.local
                port_value: 80
  - name: consecutivo-fiscal-carga-resoluciones-manual
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: consecutivo-fiscal-carga-resoluciones-manual
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: consecutivo-fiscal-carga-resoluciones-manual.dev-cfiscal.svc.cluster.local
                port_value: 80
  - name: consecutivo-fiscal-carga-resoluciones
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: consecutivo-fiscal-carga-resoluciones
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: consecutivo-fiscal-carga-resoluciones.dev-cfiscal.svc.cluster.local
                port_value: 80
  - name: consecutivo-fiscal-alerta-resoluciones
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: consecutivo-fiscal-alerta-resoluciones
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: consecutivo-fiscal-alerta-resoluciones.dev-cfiscal.svc.cluster.local
                port_value: 80
  - name: admin-core-chequeador-precios
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: admin-core-chequeador-precios
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: admin-core.dev-chequeo.svc.cluster.local
                port_value: 80
  - name: dev-interactiva-services-tarea
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: dev-interactiva-services-tarea
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: interactiva-services-tarea.dev-interactiva.svc.cluster.local
                port_value: 80
  - name: dev-interactiva-services-registro
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: dev-interactiva-services-registro
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: interactiva-services-registro.dev-interactiva.svc.cluster.local
                port_value: 80
  - name: dev-interactiva-services-catalogo
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: dev-interactiva-services-catalogo
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: interactiva-services-catalogo.dev-interactiva.svc.cluster.local
                port_value: 80
  - name: dev-interactiva-services-catalogo-view
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: dev-interactiva-services-catalogo-view
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: interactiva-services-catalogo-view.dev-interactiva.svc.cluster.local
                port_value: 80
  - name: dev-interactiva-services-escalonamiento
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: dev-interactiva-services-escalonamiento
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: interactiva-services-escalonamiento.dev-interactiva.svc.cluster.local
                port_value: 80
  - name: dev-interactiva-services-asignacion
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: dev-interactiva-services-asignacion
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: interactiva-services-asignacion.dev-interactiva.svc.cluster.local
                port_value: 80
  - name: dev-interactiva-services-bpmgateway
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: dev-interactiva-services-bpmgateway
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: interactiva-services-bpmgateway.dev-interactiva.svc.cluster.local
                port_value: 80
  - name: dev-interactiva-services-encuesta
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: dev-interactiva-services-encuesta
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: interactiva-services-encuesta.dev-interactiva.svc.cluster.local
                port_value: 80
  - name: dev-interactiva-services-bi
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: dev-interactiva-services-bi
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: interactiva-services-bi.dev-interactiva.svc.cluster.local
                port_value: 80
  - name: dev-oms-invoice-portal-back
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: dev-oms-invoice-portal-back
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: oms-invoice-portal-back.dev-oms.svc.cluster.local
                port_value: 80
  - name: dev-oms-invoice-portal
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: dev-oms-invoice-portal
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: invoice-portal.dev-oms.svc.cluster.local
                port_value: 80
  - name: consecutivo-fiscal-integracion-pos-salida
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: consecutivo-fiscal-integracion-pos-salida
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: consecutivo-fiscal-integracion-pos-salida.dev-cfiscal.svc.cluster.local
                port_value: 80
  - name: consecutivo-fiscal-integracion-pos-entrada
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: consecutivo-fiscal-integracion-pos-entrada
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: consecutivo-fiscal-integracion-pos-entrada.dev-cfiscal.svc.cluster.local
                port_value: 80
  - name: sco-admon-monitoring
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: sco-admon-monitoring
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: sco-admon-monitoring.dev-fruverscan.svc.cluster.local
                port_value: 80
  - name: sco-admon-fruver-scan
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: sco-admon-fruver-scan
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: sco-admon-fruver-scan.dev-fruverscan.svc.cluster.local
                port_value: 80
  - name: portal-pro-mandato-consultas
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: portal-pro-mandato-consultas
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: portal-pro-mandato-consultas.dev-portalpro.svc.cluster.local
                port_value: 80
  - name: portal-pro-locatario-certificados
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: portal-pro-locatario-certificados
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: portal-pro-locatario-certificados.dev-portalpro.svc.cluster.local
                port_value: 80
  - name: portal-pro-locatario-consultas-adicionales
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: portal-pro-locatario-consultas-adicionales
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: portal-pro-locatario-consultas-adicionales.dev-portalpro.svc.cluster.local
                port_value: 80
  - name: portal-pro-mandato-inscripcion
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: portal-pro-mandato-inscripcion
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: portal-pro-mandato-inscripcion.dev-portalpro.svc.cluster.local
                port_value: 80
  - name: portal-pro-mandato-terminacion
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: portal-pro-mandato-terminacion
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: portal-pro-mandato-terminacion.dev-portalpro.svc.cluster.local
                port_value: 80
  - name: portal-pro-mandato-web
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: portal-pro-mandato-web
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: portal-pro-mandato-web.dev-portalpro.svc.cluster.local
                port_value: 80
  - name: portal-pro-locatario-consultas
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: portal-pro-locatario-consultas
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: portal-pro-locatario-consultas.dev-portalpro.svc.cluster.local
                port_value: 80
  - name: continuous-documentation-frontend
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: continuous-documentation-frontend
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: continuous-documentation-frontend.dev-continuous-documentation.svc.cluster.local
                port_value: 80
  - name: ks-cliente-ventas-por-marca-cdp
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: ks-cliente-ventas-por-marca-cdp
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: ks-cliente-ventas-por-marca-cdp.dev-customerdataplatform.svc.cluster.local
                port_value: 7070
  - name: consecutivo-fiscal-ejecucion-masiva-prefijos
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: consecutivo-fiscal-ejecucion-masiva-prefijos
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: consecutivo-fiscal-ejecucion-masiva-prefijos.dev-cfiscal.svc.cluster.local
                port_value: 80
  - name: mecanizacion-ptl-cierre-ordenes
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: mecanizacion-ptl-cierre-ordenes
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: mecanizacion-ptl-cierre-ordenes.dev-ptl-textil.svc.cluster.local
                port_value: 80
  - name: invoice-services-ssoentry
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: invoice-services-ssoentry
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: invoice-services-ssoentry.dev-oms.svc.cluster.local
                port_value: 80
  - name: consignment-services-ssoentry
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: consignment-services-ssoentry
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: consignment-services-ssoentry.dev-oms.svc.cluster.local
                port_value: 80
  - name: keycloak-server
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: keycloak-server
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 10.2.98.134
                port_value: 8080
  - name: identity-server
    connect_timeout: 60s
    type: LOGICAL_DNS
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: identity-server
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: wolframio.grupo-exito.com
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: wolframio.grupo-exito.com
  - name: recibir-doc-electronicos-operador
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: recibir-doc-electronicos-operador
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: recibir-doc-electronicos-operador.dev-facturacion-electronica.svc.cluster.local
                port_value: 80
  - name: portal-pro-georeferenciacion-cropper
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: portal-pro-georeferenciacion-cropper
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: portal-pro-georeferenciacion-cropper.dev-portalpro.svc.cluster.local
                port_value: 80
  - name: portal-pro-georeferenciacion-habeas-data
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: portal-pro-georeferenciacion-habeas-data
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: portal-pro-georeferenciacion-habeas-data.dev-portalpro.svc.cluster.local
                port_value: 80
  - name: portal-pro-georeferenciacion-web
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: portal-pro-georeferenciacion-web
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: portal-pro-georeferenciacion-web.dev-portalpro.svc.cluster.local
                port_value: 80
  - name: portal-pro-georeferenciacion-formulario
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: portal-pro-georeferenciacion-formulario
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: portal-pro-georeferenciacion-formulario.dev-portalpro.svc.cluster.local
                port_value: 80
  - name: qr-bancolombia-proxy
    connect_timeout: 60s
    type: STRICT_DNS
    load_assignment:
      cluster_name: qr-bancolombia-proxy
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: qr-bancolombia-proxy.dev-qrbancolombia.svc.cluster.local
                port_value: 80
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
